WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269545
Return initial value for `stop-color` instead of `transparentBlack`
https://bugs.webkit.org/show_bug.cgi?id=269545
Summary
Return initial value for `stop-color` instead of `transparentBlack`
Ahmad Saleem
Reported
2024-02-15 21:42:36 PST
Hi Team, While looking into `stop-color` failures, I noticed that we return `transparentBlack', while I think it would be better to return `Color:Black` since it is initial value as per web-spec: Web-Spec:
https://svgwg.org/svg2-draft/pservers.html#StopColorProperties
Initial: Black Our current code:
https://searchfox.org/wubkat/rev/c40451f6052e2805fb1c6abfb61fa322c67caf5b/Source/WebCore/svg/SVGStopElement.cpp#90
We should change it to `Color:black`. transparentBlack -> static constexpr auto transparentBlack = SRGBA<uint8_t> { }; While black -> static constexpr auto black = SRGBA<uint8_t> { 0, 0, 0 }; Which makes more sense and aligned with web-spec. Thanks!
Attachments
Add attachment
proposed patch, testcase, etc.
EWS
Comment 1
2024-02-19 13:17:34 PST
Committed
274997@main
(dcd60b82e8d8): <
https://commits.webkit.org/274997@main
> Reviewed commits have been landed. Closing PR #24583 and removing active labels.
Radar WebKit Bug Importer
Comment 2
2024-02-19 13:18:14 PST
<
rdar://problem/123262508
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug