Return initial value for `stop-color` instead of `transparentBlack`

https://bugs.webkit.org/show_bug.cgi?id=269545

Reviewed by Nikolas Zimmermann.

This patch is to better align with expectations and web-specification by
returning initial value (black) rather than 'transparentBlack' for `stop-color`
in absence of 'renderer'.

Web-Spec: https://svgwg.org/svg2-draft/pservers.html#StopColorProperties

* Source/WebCore/svg/SVGStopElement.cpp:
(SVGStopElement::stopColorIncludingOpacity):

Canonical link: https://commits.webkit.org/274997@main